deploy-istio/zero/domain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain
  namespace: zero
  labels:
    app: domain
    service: domain
spec:
  selector:
    app: domain
  ports:
  - name: grpc-port
    protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
