deploy-istio/zero/domain/domain-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: domain-dr
  namespace: zero
spec:
  host: domain
  subsets:
    - name: domain
      labels:
        app: domain
